--- a/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj
+++ b/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj
@@ -129,6 +129,7 @@
     <ClInclude Include="Class.h">
       <DependentUpon>Class.cpp</DependentUpon>
     </ClInclude>
+    <ClInclude Include="PersistenceWin.h" />
     <ClInclude Include="PhotobookWin.h" />
     <ClInclude Include="ProjectItem.h">
       <DependentUpon>ProjectItem.cpp</DependentUpon>
@@ -139,6 +140,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Class.cpp" />
+    <ClCompile Include="PersistenceWin.cpp" />
     <ClCompile Include="PhotobookWin.cpp" />
     <ClCompile Include="ProjectItem.cpp" />
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
@@ -148,6 +150,7 @@
       <SubType>Code</SubType>
       <DependentUpon>Class.cpp</DependentUpon>
     </Midl>
+    <Midl Include="PersistenceWin.idl" />
     <Midl Include="PhotobookWin.idl" />
     <Midl Include="ProjectItem.idl">
       <SubType>Code</SubType>
