--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -104,11 +104,11 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /property:Platform=x64 -target:pbtests-x64 ${{env.SOLUTION_FILE_PATH}}
 
-    - name: Build PhotobookUI
+    - name: Build PhotobookNet
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /property:Platform=x64 -target:PhotobookUI ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /property:Platform=x64 -target:PhotobookNet ${{env.SOLUTION_FILE_PATH}}
 
     - name: Generate test data
       run: python PB\test-data\generate-data.py PB\test-data
