[dev] Add navigation to TableContent.

--- a/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj.filters
+++ b/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj.filters
@@ -27,6 +27,8 @@
     <ClCompile Include="StagedImages.cpp" />
     <ClCompile Include="VirtualImagePtr.cpp" />
     <ClCompile Include="Settings.cpp" />
+    <ClCompile Include="PaperSettings.cpp" />
+    <ClCompile Include="Project.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
