--- a/windows/PhotobookNet/PhotobookNet.csproj
+++ b/windows/PhotobookNet/PhotobookNet.csproj
@@ -72,6 +72,6 @@
 		<HasPackageAndPublishMenu>true</HasPackageAndPublishMenu>
 	</PropertyGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-	  <Exec Command="xcopy /y /d $([MSBuild]::NormalizeDirectory('$(SolutionDir)', '_build', '$(Platform)', '$(Configuration)'))\*.dll $(OutDir)&#xD;&#xA;xcopy /y /d $(SolutionDir)..\..\PB\build-$(Platform)\$(Configuration)\*.dll $(OutDir)&#xD;&#xA;xcopy /y $(SolutionDir)..\..\vcpkg\installed\$(Platform)-windows\debug\bin\*.dll $(OutDir)&#xD;&#xA;xcopy /y /d $([MSBuild]::NormalizeDirectory('$(SolutionDir)', '_build', '$(Platform)', '$(Configuration)'))\*.dll $(OutDir)\AppX&#xD;&#xA;xcopy /y /d $(SolutionDir)..\..\PB\build-$(Platform)\$(Configuration)\*.dll $(OutDir)\AppX&#xD;&#xA;xcopy /y $(SolutionDir)..\..\vcpkg\installed\$(Platform)-windows\debug\bin\*.dll $(OutDir)\AppX" />
+	  <Exec Command="xcopy /y /d $([MSBuild]::NormalizeDirectory('$(SolutionDir)', '_build', '$(Platform)', '$(Configuration)'))\*.dll $(OutDir) &amp;&amp; xcopy /y /d $(SolutionDir)..\..\PB\build-$(Platform)\$(Configuration)\*.dll $(OutDir) &amp;&amp; xcopy /y $(SolutionDir)..\..\vcpkg\installed\$(Platform)-windows\debug\bin\*.dll $(OutDir) &amp;&amp; xcopy /y /d $([MSBuild]::NormalizeDirectory('$(SolutionDir)', '_build', '$(Platform)', '$(Configuration)'))\*.dll $(OutDir)\AppX\ &amp;&amp; xcopy /y /d $(SolutionDir)..\..\PB\build-$(Platform)\$(Configuration)\*.dll $(OutDir)\AppX\ &amp;&amp; xcopy /y $(SolutionDir)..\..\vcpkg\installed\$(Platform)-windows\debug\bin\*.dll $(OutDir)\AppX\" />
 	</Target>
 </Project>
