--- a/windows/PhotobookNet/Properties/launchSettings.json
+++ b/windows/PhotobookNet/Properties/launchSettings.json
@@ -1,10 +1,12 @@
 {
   "profiles": {
     "PhotobookNet (Package)": {
-      "commandName": "MsixPackage"
+      "commandName": "MsixPackage",
+      "nativeDebugging": true
     },
     "PhotobookNet (Unpackaged)": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "nativeDebugging": true
     }
   }
 }
