--- a/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj.filters
+++ b/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj.filters
@@ -30,6 +30,7 @@
     <ClCompile Include="PaperSettings.cpp" />
     <ClCompile Include="Project.cpp" />
     <ClCompile Include="ProjectMetadataEntry.cpp" />
+    <ClCompile Include="VICollectionStatefulIterator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -42,6 +43,7 @@
     <ClInclude Include="VirtualImagePtr.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="ProjectMetadataEntry.h" />
+    <ClInclude Include="VICollectionStatefulIterator.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="Class.idl" />
@@ -54,6 +56,7 @@
     <Midl Include="VirtualImagePtr.idl" />
     <Midl Include="Settings.idl" />
     <Midl Include="ProjectMetadataEntry.idl" />
+    <Midl Include="VICollectionStatefulIterator.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PhotobookRuntimeComponent.def" />
