dev: Implement the `onCanvasDraw` method.

--- a/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj.filters
+++ b/windows/PhotobookRuntimeComponent/PhotobookRuntimeComponent.vcxproj.filters
@@ -62,6 +62,8 @@
     <Midl Include="Project.idl" />
     <Midl Include="PaperSettings.idl" />
     <Midl Include="StagedImagesListener.idl" />
+    <Midl Include="ImageMonitorListener.idl" />
+    <Midl Include="Int32Pair.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PhotobookRuntimeComponent.def" />
